# azurefountry

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/: test.py
backend/app/: config.py  evaluation.py  foundry_agent.py  foundry_client.py  guardrails.py  main.py  mcp_adapter.py  monitoring.py  rag.py  schemas.py  search_service.py  tools.py
data/: HR_FAQ.txt  IT_Password_Reset_Policy.txt  Incident_Escalation_Policy.txt  Software_Access_Request.txt  VPN_Access_Policy.txt  incident_policy.txt
frontend/: streamlit_app.py
scripts/: create_search_index.py  ingest_documents.py
tests/: evaluate_agent.py  test_guardtrails.py  test_integeration_api.py  test_tools.py
