[project]
name = "azurefountry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.25.3",
    "azure-search-documents>=12.0.0",
    "azure-storage-blob>=12.30.0",
    "fastapi>=0.138.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
